--- a/Tic-Tac-Toe-But-Harder/index.html
+++ b/Tic-Tac-Toe-But-Harder/index.html
@@ -9,5 +9,6 @@
     </main>
     <script src="src/defs.js"></script>
     <script src="src/game.js"></script>
+    <script src="src/test.js"></script>
     <script src="sketch.js"></script>
 </body></html>
