add : title - refact

--- a/Tic-Tac-Toe-But-Harder/index.html
+++ b/Tic-Tac-Toe-But-Harder/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+  <head>
+    <title>
+      Tic Tac Toe (but harder)
+    </title>
     <script src="lib/p5.js"></script>
     <script src="lib/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
