--- a/Tic-Tac-Toe-But-Harder/index.html
+++ b/Tic-Tac-Toe-But-Harder/index.html
@@ -13,6 +13,7 @@
     </main>
     <script src="src/defs.js"></script>
     <script src="src/game.js"></script>
+    <script src="src/AI.js"></script>
     <script src="src/test.js"></script>
     <script src="sketch.js"></script>
 </body></html>
