first release -- I guess

--- a/Tic-Tac-Toe-But-Harder/index.html
+++ b/Tic-Tac-Toe-But-Harder/index.html
@@ -9,11 +9,22 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <main>
-    </main>
+    <div class="game_container">
+      <main></main>
+    </div>
+    <div class="hide" id="log_container">
+      <div class="default_text">
+        <h1>Tic Tac Toe (but harder)</h1>
+      </div>
+      <div class="default_text">
+        <h6>v1.0.0 afmika</h6>
+      </div>
+      <div id="game_log"></div>
+    </div>
     <script src="src/defs.js"></script>
     <script src="src/game.js"></script>
     <script src="src/AI.js"></script>
     <script src="src/test.js"></script>
+    <script src="ui-html.js"></script>
     <script src="sketch.js"></script>
 </body></html>
