--- a/Tic-Tac-Toe-But-Harder/index.html
+++ b/Tic-Tac-Toe-But-Harder/index.html
@@ -19,6 +19,12 @@
       <div class="default_text">
         <h6>v1.0.0 afmika</h6>
       </div>
+      <div class="default_text">
+        <button class="default_level_btn" id="level_btn_easy" onclick="pickLevel('easy')">Easy</button>
+        <button class="default_level_btn" id="level_btn_medium" onclick="pickLevel('medium')">Medium</button>
+        <button class="default_level_btn" id="level_btn_hard" onclick="pickLevel('hard')">Hard</button>
+      </div>
+
       <div id="game_log"></div>
     </div>
     <script src="src/defs.js"></script>
