add : level insane

--- a/Tic-Tac-Toe-But-Harder/index.html
+++ b/Tic-Tac-Toe-But-Harder/index.html
@@ -17,13 +17,14 @@
         <h1>Tic Tac Toe (but harder)</h1>
       </div>
       <div class="default_text">
-        <h6>v1.0.3 afmika</h6>
+        <h6>v1.0.4 afmika</h6>
       </div>
       <div id="game_log"></div>
       <div class="default_text">
         <button class="default_level_btn" id="level_btn_easy" onclick="pickLevel('easy')">Easy</button>
         <button class="default_level_btn" id="level_btn_medium" onclick="pickLevel('medium')">Medium</button>
         <button class="default_level_btn" id="level_btn_hard" onclick="pickLevel('hard')">Hard</button>
+        <button class="default_level_btn" id="level_btn_insane" onclick="pickLevel('insane')">Insane</button>
       </div>
     </div>
     <script src="src/defs.js"></script>
